fixed z-index

--- a/src/index.css
+++ b/src/index.css
@@ -16,12 +16,15 @@ code {
   background-color: #f0f0f0;
   padding: 10px;
   display: inline-block;
+  z-index: 1000;
 }
 
 .lapBox1, .lapBox2, .lapBox3, .lapBox4 {
+  position:relative;
   transform: scale(1.3);
   transition: transform .5s ease;
   background-color: #f9a1a1;
+  z-index: 1000;
 }
 
 
